# rust-libxml

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml  build.rs  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: CI.yml  gh-pages.yml  windows.yml
benches/: parsing_benchmarks.rs
examples/: schema_example.rs  tree_example.rs  xpath_example.rs
libxml/: all.html  index.html  sidebar-items.js
libxml-sys/: Cargo.toml  README.md  build.rs
libxml-sys/src/: lib.rs  wrapper.h
libxml/bindings/: constant.AIO_PRIO_DELTA_MAX.html  constant.ARG_MAX.html  constant.BASE_BUFFER_SIZE.html  constant.BC_BASE_MAX.html  constant.BC_DIM_MAX.html  constant.BC_SCALE_MAX.html  constant.BC_STRING_MAX.html  constant.BIG_ENDIAN.html  constant.BUFSIZ.html  constant.BYTE_ORDER.html  constant.CHARCLASS_NAME_MAX.html  constant.COLL_WEIGHTS_MAX.html  constant.DELAYTIMER_MAX.html  constant.EOF.html  constant.EXIT_FAILURE.html  constant.EXIT_SUCCESS.html  constant.EXPR_NEST_MAX.html  constant.FALSE.html  constant.FD_SETSIZE.html  constant.FILENAME_MAX.html  constant.FOPEN_MAX.html  constant.HOST_NAME_MAX.html  constant.ICU_PIVOT_BUF_SIZE.html  constant.INPUT_CHUNK.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  (+4734 more)
libxml/error/: index.html  sidebar-items.js  struct.StructuredError.html
libxml/io/: fn.register_input_callback.html  index.html  sidebar-items.js
libxml/parser/: enum.ParseFormat.html  enum.XmlParseError.html  index.html  sidebar-items.js  struct.Parser.html  struct.ParserOptions.html
libxml/readonly/: index.html  sidebar-items.js  struct.RoNode.html
libxml/schemas/: index.html  sidebar-items.js  struct.SchemaParserContext.html  struct.SchemaValidationContext.html
libxml/tree/: index.html  sidebar-items.js
libxml/xpath/: index.html  sidebar-items.js  struct.Context.html  struct.Object.html
scripts/: bindgen_wrapper.h  doc-upload.sh
search.desc/libxml/: libxml-desc-0-.js
search.index/: 00036a2acb44.js  000bdd91f42d.js  001085d78128.js  0016d2805461.js  00186433ac6d.js  001fb3dae262.js  002079de040d.js  0022b0e59d9f.js  0026693b5165.js  003140b85ddf.js  0032575b183c.js  003afec971cf.js  00499e5f15.js  0050425a23a9.js  0070542919b2.js  0085a79e582a.js  00ce812e31.js  00cfb4ec1bb1.js  00d467f85b25.js  00d606299c8c.js  00d6eb0c3e.js  00d8d729c3f3.js  00e36ffe536d.js  00f4e0511ea1.js  00f69930dcc3.js  010006fd15f6.js  010ebb1235f5.js  0115694f0241.js  0115792b89b4.js  011a72ddbc4b.js  0124da64c683.js  01277c682363.js  013cbe10ca.js  0141cdb55706.js  014fae046a6a.js  0164724b06d5.js  017361919ad4.js  017768e4bc44.js  0178dc8ae807.js  01a41d3f8890.js  (+3121 more)
search.index/desc/: 45a7f9faf56e.js  6104ffdcaadc.js  c2647c2fc34c.js
search.index/entry/: 9c7bed71b63e.js  b7e046531554.js
search.index/function/: ed90d7c234.js
search.index/generic_inverted_index/: 8b7ab47438ef.js  8e2690163ec8.js  c0b03e5e53.js  ca86af879ae6.js
search.index/name/: 3ed585d7bece.js  57e2ca569671.js  c173526294.js  d4f274cfec18.js
search.index/normalizedName/: 0e54831b7d0d.js  198fd5e7df.js  b17816cd7da1.js  c41830af1cff.js  cc3b9703a314.js  dc5fa6bdc8.js
search.index/path/: 573c7f38fe87.js  7d31e1478da8.js
search.index/type/: 02099bdabd77.js  3b1ecfe07366.js  b827736b8194.js
src/: bindings.rs  c_helpers.rs  c_signatures.rs  default_bindings.rs  error.rs  global.rs  helper.rs  helper_functions.c  helper_functions.h  io.rs  lib.rs  parser.rs  readonly.rs  tree.rs  wrapper.h  xpath.rs
src/ergo/: mod.rs
src/libxml/: bindings.rs.html  c_helpers.rs.html  error.rs.html  io.rs.html  lib.rs.html  parser.rs.html  readonly.rs.html  xpath.rs.html
src/libxml2/: mod.rs  wrapper.h
src/readonly/: context.rs  document.rs  tree.rs  xpath.rs
src/schemas/: common.rs  mod.rs  parser.rs  schema.rs  validation.rs
src/tree/: c14n.rs  document.rs  mod.rs  namespace.rs  node.rs  nodetype.rs
tests/: VALGRIND.md  base_tests.rs  c14n.rs  codec_tests.rs  dup_node_into_new_doc_tests.rs  lib.rs  mutability_guards.rs  ownership_flaws.rs  rayon_test.rs  readonly_tests.rs  rust_owned_tests.rs  schema_tests.rs  tree_tests.rs  xml_copy_invariant_tests.rs  xpath_readonly_tests.rs  xpath_tests.rs
tests/resources/: as_html.xml  as_html_result.xml  as_html_result_2.15.xml  empty_tags.xml  empty_tags_result.xml  file01.xml  file01_ns.xml  file01_utf16be.xml  file01_utf16be_bom.xml  file01_utf16le.xml  file01_utf16le_bom.xml  file01_utf8_bom.xml  file02.xml  ids.xml  large_doc.xml  schema.xml  schema.xsd  (+2 more)
(+134 files in other folders)
