[workspace]
members = ['.', "libxml-sys"]
[workspace.package]
version = "0.3.8"
edition = "2024"
authors = [
  "Andreas Franzén <andreas@devil.se>",
  "Deyan Ginev <deyan.ginev@gmail.com>",
  "Jan Frederik Schaefer <j.schaefer@jacobs-university.de>",
]
description = "A Rust wrapper for libxml2 - the XML C parser and toolkit developed for the Gnome project"
repository = "https://github.com/KWARC/rust-libxml"
readme = "README.md"
license = "MIT"
keywords = ["xml", "libxml", "xpath", "parser", "html"]

[package]
name = "libxml"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
documentation = "https://kwarc.github.io/rust-libxml/libxml/index.html"
readme.workspace = true
license.workspace = true
keywords.workspace = true
exclude = ["scripts/*"]

[lib]
name = "libxml"

[features]
iconv = ["libxml-sys/iconv"]
zlib = ["libxml-sys/zlib"]

[dependencies]
libc = "0.2"
libxml-sys = { path = "libxml-sys" }
[dev-dependencies]
rayon = "1.0.0"
criterion = "0.8.0"

[[bench]]
name = "parsing_benchmarks"
harness = false
